@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to create configure.
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(feh, 0.9.0)
+AM_INIT_AUTOMAKE(feh, 0.9.1)
 
 AC_PROG_CC
 AM_PROG_CC_STDC
@@ -25,6 +25,7 @@ echo "checking for pr0n.... found"
 
 AC_OUTPUT(Makefile \
 feh.spec \
+cam/Makefile \
 src/Makefile \
 src/ttfonts/Makefile \
 )
